Sat Jun  2 21:04:32 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SIM modules are not delivered to SILC CLient distribution
	  anymore.

	* Changed default installation path from /usr/local/silc to
	  /usr/local for all distributions.

	* Removed --with-etcdir and --with-docdir.  The etcdir is now
	  the system's default.  The Docdir is system's default.

Sat Jun  2 00:51:57 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* If public key/private key loading fails set the return
	  pointer to NULL.  Affected file is lib/silccrypt/silcpkcs.c.

	* If private key loading fails in silc_load_key_pair free the
	  loaded public key.  Affected file is
	  lib/silcapputil/silcapputil.c.

	* Fixed key pair loading crash with SILC Plugin if key pair
	  loading fails.  Affected file is
	  apps/irssi/src/silc/core/silc-core.c.

	* Fixed SILC Client help and script file installation path
	  to go to prefix/share/silc.  Affected files are
	  apps/irssi/src/scripts/Makefile.am and
	  apps/irssi/docs/help/Makefile.am.gen.

Thu May 31 16:49:13 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed UTC offset minutes to be actually minutes.  Affected
	  file is lib/silcutil/silctime.c.

Thu May 31 09:40:56 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1.

	* Added support for checking for timezone and tm_gmtoff.
	  Affected files are configure.ad and lib/silcutil/silctime.c.

Wed May 30 18:46:34 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added silc-toolkit.spec.in RPM spec file.

Mon May 28 23:21:39 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed nickname formatting crash when updating existing
	  client entry.  Affected file is lib/silcclient/client_entry.c.

	* Fixed MIME object encoding in attribute payload encoding.
	  Affected file is lib/silccore/silcattrs.c.

Mon May 28 09:02:26 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1 Beta6

Sun May 27 20:38:30 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
