@@ -3,7 +3,7 @@
 #
 #  Author: Pekka Riikonen <priikone@silcnet.org>
 #
-#  Copyright (C) 2000 - 2005 Pekka Riikonen
+#  Copyright (C) 2000 - 2007 Pekka Riikonen
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -49,10 +49,12 @@ silc_etcdir=@ETCDIR@
 silc_modulesdir=@MODULESDIR@
 silc_helpdir=@HELPDIR@
 silc_docdir=@DOCDIR@
-silc_logsdir=@LOGSDIR@
 etcdir = $(DESTDIR)$(silc_etcdir)
 modulesdir = $(DESTDIR)$(silc_modulesdir)
 helpdir = $(DESTDIR)$(silc_helpdir)
 docdir = $(DESTDIR)$(silc_docdir)
-logsdir = $(DESTDIR)$(silc_logsdir)
 mandir = $(DESTDIR)@mandir@
+#ifdef SILC_DIST_SERVER
+silc_logsdir=@LOGSDIR@
+logsdir = $(DESTDIR)$(silc_logsdir)
+#endif SILC_DIST_SERVER
