@@ -1,11 +1,6 @@
-include $(top_srcdir)/Makefile.defines.in
-
-docdir = $(silc_docdir)
 
 doc_DATA = signals.txt formats.txt manual.txt startup-HOWTO.html \
 	special_vars.txt
-#	faq.txt
-#	startup-HOWTO.txt
 
 EXTRA_DIST = $(doc_DATA)
 
