@@ -1,3 +1,7 @@
+Sun Jun  3 14:00:09 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed DESTDIR handling in make install.
+
 Sat Jun  2 21:04:32 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* SIM modules are not delivered to SILC CLient distribution
